spacing fix

--- a/packages/web-components/src/components/va-text-input/va-text-input.scss
+++ b/packages/web-components/src/components/va-text-input/va-text-input.scss
@@ -70,4 +70,5 @@ input.usa-input {
   // override error left border when show-input-error is set false
   border-left: 0;
   padding-left: 0;
+  margin-left: 0;
 }
